# Info-of-file-g

./: .gitignore  CMakeLists.txt  Information_file.pro  Information_file.pro.user.0a9f7c3  README.md  about.cpp  about.h  about.ui  about.ui.autosave  file.rc  file_actions_window.cpp  file_actions_window.h  file_actions_window.ui  info_of_file.cpp  info_of_file.hpp  main.cpp  qrc.qrc  settings.cpp  settings.h  settings.ui  style.css  version.h  warning.cpp  warning.h  warning.ui
resource/styles/: style_black_theme.css  style_purple_theme.css  style_white_theme.css
